--- a/pages/subpages/notice/chat/components/comment-list/index.wxss
+++ b/pages/subpages/notice/chat/components/comment-list/index.wxss
@@ -52,23 +52,24 @@
   background-color: #1F85FE;
 }
 .content.complex {
+  padding: 18rpx;
   line-height: normal;
   background: #fff;
 }
-.product, .order {
+.product {
   display: flex;
   align-items: center;
 }
 .product-cover-wrap {
   position: relative;
-  margin-right: 24rpx;
-  width: 124rpx;
-  height: 124rpx;
+  margin-right: 18rpx;
+  width: 128rpx;
+  height: 128rpx;
   font-size: 0;
 }
 .product-cover {
-  width: 124rpx;
-  height: 124rpx;
+  width: 128rpx;
+  height: 128rpx;
   border-radius: 12rpx;
 }
 .product-type {
@@ -77,11 +78,11 @@
   right: 12rpx;
   display: flex;
   align-items: center;
-  padding: 0 12rpx;
-  height: 36rpx;
+  padding: 0 8rpx;
+  height: 32rpx;
   color: #000;
-  font-size: 18rpx;
-  border-radius: 18rpx;
+  font-size: 16rpx;
+  border-radius: 16rpx;
   background: rgba(255, 255, 255, 0.8);
 }
 .product-detail, .order-detail {
@@ -89,27 +90,28 @@
   flex-direction: column;
   justify-content: space-between;
   flex: 1;
-  height: 124rpx;
+  height: 128rpx;
 }
-.order-num {
+.order-product-info {
   display: flex;
   align-items: center;
-  color: #666;
-  font-size: 24rpx;
-  font-weight: 500;
-  white-space: nowrap;
+  margin-bottom: 18rpx;
 }
-.order-num-tip {
-  margin-right: 6rpx;
-  padding: 0 4rpx;
-  width: 72rpx;
-  height: 28rpx;
-  color: #fff;
-  font-size: 18rpx;
-  text-align: center;
-  line-height: 28rpx;
-  background: #8E8E8E;
-  border-radius: 4rpx;
+.order-info {
+  display: flex;
+  align-items: center;
+  margin-top: 8rpx;
+  color: #999;
+  font-size: 24rpx;
+}
+.order-info-title {
+  margin-right: 24rpx;
+  color: #333;
+  font-weight: 500;
+}
+.order-price-info {
+  color: #999;
+  font-size: 24rpx;
 }
 .product-name {
   display: -webkit-box;
@@ -118,26 +120,12 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   color: #333;
-  font-size: 28rpx;
+  font-size: 26rpx;
   font-weight: bold;
 }
 .product-price {
   color: #FD2D55;
-  font-size: 32rpx;
+  font-size: 30rpx;
   font-weight: 500;
   text-align: right;
-}
-.consignee {
-  padding-top: 10rpx;
-  flex: 1;
-  color: #666;
-  font-size: 26rpx;
-  font-weight: 500;
-}
-.order-time {
-  color: #999;
-  font-size: 22rpx;
-  font-weight: 500;
-  line-height: 1;
-  white-space: nowrap;
 }
