--- a/pages/subpages/notice/chat/index.wxss
+++ b/pages/subpages/notice/chat/index.wxss
@@ -102,6 +102,28 @@
   border-radius: 24rpx;
 }
 
+.order-detail {
+  margin-left: 24rpx;
+  flex: 1;
+}
+.order-info {
+  margin-bottom: 8rpx;
+  color: #999;
+  font-size: 26rpx;
+}
+.order-info-title {
+  margin-right: 24rpx;
+  color: #333;
+  font-weight: 500;
+}
+.order-operation {
+  margin-top: 32rpx;
+}
+.order-price-info {
+  color: #999;
+  font-size: 24rpx;
+}
+
 .comment {
   position: relative;
   flex: 1;
@@ -179,16 +201,3 @@
   border-radius: 46rpx;
 }
 
-.order-operation {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-between;
-  height: 100%;
-}
-
-.order-status {
-  color: #e93c65;
-  font-size: 26rpx;
-  font-weight: 500;
-}
