--- a/pages/subpages/home/media/author-center/index.wxml
+++ b/pages/subpages/home/media/author-center/index.wxml
@@ -14,11 +14,11 @@
     <view class="avatar-wrap">
       <image class="avatar" src="{{authorInfo.avatar}}" bindtap="checkAvatar" />
       <view class="btns-wrap row end">
-        <button class="chat-btn" wx:if="{{isFollow}}" hover-class="none">
+        <button class="chat-btn" wx:if="{{isFollow}}" bindtap="chat" hover-class="none">
           <image class="btn-icon" src="./images/chat.png" />
           <text>私聊</text>
         </button>
-        <button class="share-btn" hover-class="none" bindtap="share">
+        <button class="share-btn" bindtap="share" hover-class="none" >
           <image class="btn-icon" src="./images/share.png" />
           <text>分享</text>
         </button>
