--- a/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxml
@@ -151,6 +151,7 @@
       wx:key="index" 
       ticket="{{item}}" 
       restaurantId="{{restaurantInfo.id}}" 
+      restaurantCover="{{restaurantInfo.cover}}"
       restaurantName="{{restaurantInfo.name}}"
     />
   </view>
@@ -172,6 +173,7 @@
       wx:key="index" 
       info="{{item}}" 
       restaurantId="{{restaurantInfo.id}}" 
+      restaurantCover="{{restaurantInfo.cover}}"
       restaurantName="{{restaurantInfo.name}}"
     />
   </view>
