--- a/pages/subpages/notice/chat/index.wxml
+++ b/pages/subpages/notice/chat/index.wxml
@@ -32,7 +32,9 @@
   <view class="order-list" wx:if="{{orderInfo}}" style="top: {{statusBarHeight + 55}}px">
     <view class="product-cover-wrap">
       <image class="product-cover" src="{{orderInfo.cover}}" mode="aspectFill" />
-      <view class="product-type">{{['景点', '酒店', '美食', '商品'][orderInfo.type - 1]}}</view>
+      <view class="product-type">
+        {{['景点', '酒店', '', '商品', '美食', '美食'][orderInfo.type - 1]}}
+      </view>
     </view>
     <view class="order-detail">
       <view class="order-info row">
@@ -45,8 +47,7 @@
       </view>
       <view class="order-operation row between">
         <view class="order-price-info">
-          <text>共{{orderInfo.productNum}}件商品，</text>
-          <text>合计¥{{orderInfo.paymentAmount}}</text>
+          共{{orderInfo.productNum}}{{['张门票', '间房', '', '件商品', '张餐券', '份套餐'][orderInfo.type - 1]}}，合计¥{{orderInfo.paymentAmount}}
         </view>
         <view class="seek-btn" bindtap="sendCustomMsg" data-type="{{2}}">咨询订单</view>
       </view>
