--- a/pages/subpages/mall/goods/subpages/order-check/index.wxml
+++ b/pages/subpages/mall/goods/subpages/order-check/index.wxml
@@ -1,6 +1,11 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
 
-<view class="container">
+<view class="container" style="padding-top: {{statusBarHeight}}px;">
+  <view class="header row">
+    <back-icon />
+    <view class="title">确认订单</view>
+  </view>
+
   <view class="card err row" wx:if="{{preOrderInfo.errMsg}}">
     <image class="err-icon" src="./images/err-icon.png" />
     <view class="err-msg">{{preOrderInfo.errMsg}}</view>
@@ -19,7 +24,7 @@
       </view>
     </view>
     <view class="address-wrap row" style="border-top-right-radius: 16rpx" wx:if="{{(goodsDeliveryMode === 3 && curMenuIdx === 0) || goodsDeliveryMode === 1}}" bindtap="showAddressPopup">
-      <image class="address-icon" src="https://img.ubo.vip/mp/selection/goods-detail/order-check/address-icon.png" />
+      <image class="address-icon" src="./images/address.png" />
       <view class="consignee">
         <view class="person-info" wx:if="{{preOrderInfo.addressInfo}}">
           <text class="consignee-name">{{preOrderInfo.addressInfo.name}}</text>
@@ -28,7 +33,7 @@
         <view class="address-info" wx:if="{{preOrderInfo.addressInfo}}">{{preOrderInfo.addressInfo.regionDesc + ' ' + preOrderInfo.addressInfo.addressDetail}}</view>
         <view wx:if="{{!preOrderInfo.addressInfo}}">请选择合适的寄件地址</view>
       </view>
-      <image class="select-icon" src="https://img.ubo.vip/mp/selection/goods-detail/order-check/to-icon.png" />
+      <image class="select-icon" src="./images/arrow.png" />
     </view>
     <view class="address-wrap" style="border-top-left-radius: 16rpx" wx:if="{{(goodsDeliveryMode === 3 && curMenuIdx === 1) || goodsDeliveryMode === 2}}">
       <view class="pickup-address-wrap">
@@ -44,13 +49,13 @@
             <view class="distance">距您{{pickupAddressList[curPickupAddressIdx].distance}}km</view>
             <view class="check-map-btn" bindtap="navigation">
               <view>查看地图</view>
-              <image class="address-arrow" src="/images/arrow.png" />
+              <image class="address-arrow" src="./images/arrow.png" />
             </view>
           </view>
         </view>
         <view class="change-btn" bindtap="showPickupAddressPopup">
           <view>切换</view>
-          <image class="change-btn-arrow" src="/images/arrow.png" />
+          <image class="change-btn-arrow" src="./images/arrow.png" />
         </view>
       </view>
       <view class="pickup-info-wrap">
@@ -58,14 +63,14 @@
           <view class="pickup-info-title">自取时间</view>
           <view class="pickup-info-detail">
             <view class="pickup-time">{{pickupTime ? TIME.transform(pickupTime, 'YYYY-MM-DD hh:mm') : '未选择'}}</view>
-            <image class="pickup-info-arrow" src="/images/arrow.png" />
+            <image class="pickup-info-arrow" src="./images/arrow.png" />
           </view>
         </view>
         <view class="pickup-info" bindtap="showMobileModal">
           <view class="pickup-info-title">预留电话</view>
           <view class="pickup-info-detail">
             <view class="pickup-phone">{{pickupMobile || '未设置'}}</view>
-            <image class="pickup-info-arrow" src="/images/arrow.png" />
+            <image class="pickup-info-arrow" src="./images/arrow.png" />
           </view>
         </view>
       </view>
