--- a/pages/subpages/mall/goods/subpages/order-check/index.wxss
+++ b/pages/subpages/mall/goods/subpages/order-check/index.wxss
@@ -1,12 +1,36 @@
 .container {
+  position: relative;
   padding-bottom: calc(60px + env(safe-area-inset-bottom));
+}
+.container::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 600rpx;
+  content: "";
+  background: linear-gradient( 180deg, #00B2FF 20%, rgba(0,178,255,0) 100%);
+  z-index: -1;
+}
+
+.header {
+  padding-left: 8px;
+  padding-right: 40px;
+  height: 44px;
+}
+.title {
+  flex: 1;
+  color: #fff;
+  font-size: 32rpx;
+  text-align: center;
+  font-weight: bold;
 }
 
 .card {
   margin: 24rpx;
   padding: 24rpx;
   background-color: #fff;
-  border-radius: 16rpx;
+  border-radius: 32rpx;
 }
 .card-title {
   color: #333;
@@ -31,19 +55,19 @@
 
 .delivery-method-wrap {
   margin: 24rpx;
-  background: #edf0f3;
-  border-radius: 16rpx;
+  background: #D7F3FF;
+  border-radius: 32rpx;
   overflow: hidden;
 }
 .menu {
   display: flex;
-  background: #edf0f3;
+  background: #D7F3FF;
 }
 .menu-item {
   position: relative;
   flex: 1;
   height: 80rpx;
-  color: #333;
+  color: #141925;
   font-size: 26rpx;
   background: #fff;
 }
@@ -53,26 +77,26 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  background: #edf0f3;
+  background: #D7F3FF;
 }
 .menu-item.active {
-  color: var(--blue-1);
+  color: #141925;
   font-size: 30rpx;
   font-weight: bold;
-  border-radius: 16rpx 16rpx 0 0;
+  border-radius: 32rpx 32rpx 0 0;
 }
 .menu-item.active > .menu-item-inner {
   background: #fff;
-  border-radius: 16rpx 16rpx 0 0;
+  border-radius: 32rpx 32rpx 0 0;
 }
 .menu-item:first-child > .menu-item-inner{
-  border-bottom-right-radius: 16rpx;
+  border-bottom-right-radius: 32rpx;
 }
 .menu-item:first-child.active > .menu-item-inner{
   border-bottom-right-radius: 0;
 }
 .menu-item:last-child > .menu-item-inner{
-  border-bottom-left-radius: 16rpx;
+  border-bottom-left-radius: 32rpx;
 }
 .menu-item:last-child.active > .menu-item-inner{
   border-bottom-left-radius: 0;
@@ -96,17 +120,17 @@
 }
 .pickup-address-detail {
   margin-top: 8rpx;
-  color: #333;
-  font-size: 28rpx;
+  color: #999;
+  font-size: 24rpx;
 }
 .distance-info {
   display: flex;
   align-items: center;
-  margin-top: 12rpx;
+  margin-top: 16rpx;
 }
 .distance-icon {
-  width: 32rpx;
-  height: 32rpx;
+  width: 28rpx;
+  height: 28rpx;
 }
 .distance {
   margin-left: 2rpx;
@@ -119,7 +143,7 @@
   margin-left: 12rpx;
   padding-left: 12rpx;
   height: 28rpx;
-  color: #999;
+  color: #333;
   font-size: 26rpx;
   line-height: 1;
   border-left: 1px solid #eee;
@@ -132,14 +156,11 @@
 .change-btn {
   display: flex;
   align-items: center;
-  margin-top: 6rpx;
-  margin-left: 12rpx;
   color: var(--blue-1);
   font-size: 26rpx;
-  line-height: 1;
 }
 .change-btn-arrow {
-  margin-left: 6rpx;
+  margin-left: 4rpx;
   width: 20rpx;
   height: 20rpx;
 }
@@ -179,7 +200,6 @@
   height: 20rpx;
 }
 
-/* 地址 */
 .address-icon {
   width: 36rpx; 
   height: 36rpx;
@@ -202,7 +222,7 @@
   font-weight: bold;
 }
 .address-info {
-  margin-top: 12rpx;
+  margin-top: 8rpx;
   color: #333;
   font-size: 26rpx;
 }
@@ -234,7 +254,7 @@
   margin-right: 18rpx;
   width: 184rpx;
   height: 184rpx;
-  border-radius: 16rpx;
+  border-radius: 32rpx;
 }
 .goods-content {
   display: flex;
