--- a/pages/subpages/mall/hotel/components/hotel-item/index.wxss
+++ b/pages/subpages/mall/hotel/components/hotel-item/index.wxss
@@ -64,15 +64,18 @@
 
 .position-wrap {
   display: flex;
-  align-items: center;
   margin-top: 10rpx;
   color: #666;
   font-size: 22rpx;
 }
 .position-icon {
+  margin-top: 6rpx;
   margin-right: 6rpx;
   width: 20rpx;
   height: 20rpx;
+}
+.position-content {
+  flex: 1;
 }
 
 .labels {
