--- a/pages/subpages/mall/hotel/components/hotel-item/index.wxml
+++ b/pages/subpages/mall/hotel/components/hotel-item/index.wxml
@@ -1,7 +1,7 @@
 <view class="hotel-item" bindtap="checkDetail">
   <image class="cover" src="{{ item.cover }}" mode="aspectFill" lazy-load />
   <view class="content">
-    <view class="title omit">{{ item.name }}</view>
+    <view class="title omit single">{{ item.name }}</view>
     <view class="desc omit single">{{['经济酒店', '舒适酒店', '高档酒店', '豪华酒店'][item.grade - 1]}} ｜ {{item.englishName}} </view>
     <view class="data-wrap">
       <view class="score">4.2</view>
@@ -16,7 +16,7 @@
     </view>
     <view class="position-wrap">
       <image class="position-icon" src="./images/position.png" />
-      <text>{{item.address}}，距您{{distance}}km</text>
+      <view class="position-content">{{item.address}}，距您{{distance}}km</view>
     </view>
     <view class="labels">
       <view class="label" wx:for="{{item.featureTagList}}" wx:key="index" wx:for-item="tag">{{tag}}</view>
