--- a/pages/subpages/mall/hotel/subpages/order-check/index.wxss
+++ b/pages/subpages/mall/hotel/subpages/order-check/index.wxss
@@ -28,20 +28,21 @@
   position: relative;
   padding: 24rpx 24rpx calc(150rpx + env(safe-area-inset-bottom));
 }
-.bg {
+.container::before {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 600rpx;
-  background: linear-gradient(180deg, #1a69f1 0%, #f5f6f8 100%);
+  content: "";
+  background: linear-gradient( 180deg, #00B2FF 20%, rgba(0,178,255,0) 100%);
   z-index: -1;
 }
 
 .room {
   padding: 24rpx;
   background: #fff;
-  border-radius: 18rpx;
+  border-radius: 32rpx;
 }
 .room-name {
   color: #333;
@@ -112,7 +113,7 @@
 
 .cancellable-status {
   margin-top: 24rpx;
-  color: #1dc3c1;
+  color: var(--blue-1);
   font-size: 24rpx;
 }
 .cancellable-status.uncancellable {
@@ -128,7 +129,7 @@
   margin-top: 24rpx;
   padding: 24rpx 24rpx 0;
   background-color: #fff;
-  border-radius: 16rpx;
+  border-radius: 32rpx;
 }
 .card-title {
   color: #333;
