--- a/pages/subpages/mall/scenic/subpages/order-check/index.wxss
+++ b/pages/subpages/mall/scenic/subpages/order-check/index.wxss
@@ -52,7 +52,7 @@
 
 .date-picker-title, .count-control-title {
   color: #333;
-  font-size: 28rpx;
+  font-size: 30rpx;
   font-weight: bold;
 }
 .date-picker-list {
@@ -99,13 +99,13 @@
   border-radius: 16rpx;
 }
 .btn-desc {
-  margin-left: 16rpx;
+  margin-left: 18rpx;
   color: #666;
   font-size: 24rpx;
 }
 .more-icon {
-  width: 28rpx;
-  height: 28rpx;
+  width: 24rpx;
+  height: 24rpx;
 }
 
 .count-control {
@@ -131,7 +131,7 @@
   border-right: 1px solid #ddd;
   margin-right: 12rpx;
   color: #666;
-  font-size: 22rpx;
+  font-size: 24rpx;
   line-height: 1;
 }
 .tips:last-child {
@@ -160,13 +160,14 @@
 .title-tips {
   margin-left: 12rpx;
   color: #999;
-  font-size: 22rpx;
+  font-size: 24rpx;
+  font-weight: 300;
 }
 
 .tourist-info-item {
-  padding: 24rpx 0;
-  font-size: 26rpx;
-  border-bottom: 1px solid #eee;
+  padding: 32rpx 0;
+  font-size: 28rpx;
+  border-bottom: 1px solid #f5f6f8;
 }
 .tourist-info-item:last-child {
   border-bottom: none;
@@ -187,7 +188,7 @@
   padding: 18rpx 24rpx calc(18rpx + env(safe-area-inset-bottom));
   width: 100%;
   background: #fff;
-  border-top: 1px solid #f5f6f7;
+  border-top: 1px solid #f5f6f8;
 }
 .total-price-wrap {
   margin-right: 32rpx;
