--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -47,7 +47,7 @@
         <follow-media-item wx:for="{{followMediaList}}" wx:key="index" item="{{item}}" />
         <view class="loading row center" wx:if="{{followMediaList.length && followLoading}}">
           <image class="loading-icon" src="https://static.tiddler.cn/mp/loading.gif" />
-          <text>加载中</text>
+          <text>正在加载</text>
         </view>
         <view class="no-more-tips" wx:if="{{followFinished && followMediaList.length}}">～没有更多啦～</view>
         <empty-illus 
