--- a/pages/subpages/common/search/components/goods-item/index.wxml
+++ b/pages/subpages/common/search/components/goods-item/index.wxml
@@ -2,7 +2,7 @@
   <image class="goods-cover" mode="widthFix" src="{{item.cover}}" bindload="onCoverLoaded" lazy-load />
   <view class="goods-content">
     <view class="goods-title omit">
-      <text class="goods-tag" wx:if="{{!item.shopInfo}}">自营</text>
+      <image class="self-support-tag" wx:if="{{!item.shopInfo}}" src="https://static.tiddler.cn/mp/self_support.png" />
       {{item.name}}
     </view>
     <view class="info-wrap row between">
