--- a/pages/subpages/common/search/components/restaurant-item/index.wxml
+++ b/pages/subpages/common/search/components/restaurant-item/index.wxml
@@ -4,7 +4,7 @@
   url="/pages/subpages/mall/catering/subpages/restaurant-detail/index?id={{item.id}}"
   hover-class="none"
 >
-  <view class="restaurant-main row">
+  <view class="restaurant-main">
     <image class="restaurant-cover" src="{{item.cover}}" mode="aspectFill" lazy-load />
     <view class="restaurant-content">
       <view class="row">
@@ -18,28 +18,26 @@
       </view>
       <view class="open-time-wrap row top">
         <view class="open-status row {{openStatus ? 'active' : ''}}">{{openStatus ? '营业中' : '休息中'}}</view>
-        <view class="open-time-list">
-          <view class="open-time" wx:for="{{openTimeDescList}}" wx:for-item="desc" wx:for-index="descIdx" wx:key="descIdx">{{desc}}</view>
-        </view>
+        <view class="open-time omit single">{{openTimeDesc}}</view>
       </view>
       <view class="facilityList">
         <view class="facility" wx:for="{{facilityList}}" wx:for-item="facility" wx:for-index="facilityIdx" wx:key="facilityIdx">{{facility}}</view>
       </view>
       <view class="position-wrap">
         <image class="position-icon" src="./images/position.png" />
-        <text>{{item.address}}，距您{{distance}}km</text>
+        <view class="position-content">{{item.address}}，距您{{distance}}km</view>
       </view>
     </view>
   </view>
-  <view class="meal-ticket-list">
-    <view class="meal-ticket row" wx:if="{{item.mealTicketList.length}}">
+  <view class="meal-ticket-list" wx:if="{{item.mealTicketList.length}}">
+    <view class="meal-ticket row">
       <view class="ticket-lebal-wrap row end">
         <view class="ticket-lebal row">新客特惠</view>
       </view>
       <view class="ticket-content row">
         <view class="ticket-icon row center">券</view>
         <view class="ticket-price">¥{{item.mealTicketList[0].price}}</view>
-        <view class="ticket-desc">{{item.mealTicketList[0].originalPrice}}元代金券</view>
+        <view class="ticket-desc omit single">{{item.mealTicketList[0].originalPrice}}元代金券</view>
       </view>
     </view>
     <view class="meal-ticket row" wx:if="{{item.setMealList.length}}">
@@ -49,8 +47,7 @@
       <view class="ticket-content row">
         <view class="ticket-icon row center">惠</view>
         <view class="ticket-price">¥{{item.setMealList[0].price}}</view>
-        <view class="ticket-discount row">{{setMealDiscount}}折</view>
-        <view class="ticket-desc">{{item.setMealList[0].name}}</view>
+        <view class="ticket-desc omit single">{{item.setMealList[0].name}}</view>
       </view>
     </view>
   </view>
