--- a/pages/subpages/common/search/components/scenic-item/index.wxml
+++ b/pages/subpages/common/search/components/scenic-item/index.wxml
@@ -1,5 +1,5 @@
 <navigator 
-  class="scenic"
+  class="scenic-item"
   wx:key="index"
   url="/pages/subpages/mall/scenic/subpages/scenic-detail/index?id={{item.id}}"
   hover-class="none"
@@ -20,7 +20,7 @@
     </view>
     <view class="position-wrap">
       <image class="position-icon" src="./images/position.png" />
-      <text>{{item.address}}，距您{{distance}}km</text>
+      <view class="position-content">{{item.address}}，距您{{distance}}km</view>
     </view>
     <view class="price-info">
       <view class="sales">已售 13506</view>
