--- a/pages/subpages/common/search/components/scenic-item/index.wxss
+++ b/pages/subpages/common/search/components/scenic-item/index.wxss
@@ -1,16 +1,16 @@
-.scenic {
+.scenic-item {
   display: flex;
   align-items: center;
   margin-bottom: 24rpx;
   padding: 24rpx;
   font-size: 0;
   background: #fff;
-  border-radius: 24rpx;
+  border-radius: 32rpx;
 }
 .scenic-cover {
   width: 220rpx;
   height: 220rpx;
-  border-radius: 12rpx;
+  border-radius: 24rpx;
 }
 
 .scenic-content {
@@ -18,7 +18,7 @@
   flex-direction: column;
   margin-left: 20rpx;
   flex: 1;
-  height: 230rpx;
+  height: 220rpx;
 }
 .scenic-title {
   color: #333;
@@ -58,18 +58,23 @@
   color: #666;
   font-size: 18rpx;
 }
+
 .position-wrap {
   display: flex;
-  align-items: center;
   margin-top: 10rpx;
+}
+.position-icon {
+  margin-top: 6rpx;
+  margin-right: 6rpx;
+  width: 20rpx;
+  height: 20rpx;
+}
+.position-content {
+  flex: 1;
   color: #666;
   font-size: 20rpx;
 }
-.position-icon {
-  margin-right: 6rpx;
-  width: 18rpx;
-  height: 18rpx;
-}
+
 .price-info {
   display: flex;
   align-items: flex-end;
