--- a/pages/subpages/common/search/index.wxml
+++ b/pages/subpages/common/search/index.wxml
@@ -83,41 +83,56 @@
 
 <view class="list-wrap" wx:if="{{searching && curMenuIdx === 0}}">
   <view class="result-overview-wrap" wx:if="{{scenicList.length}}">
-    <view class="result-title row">
+    <view class="result-title row between">
       <view>景点</view>
-      <image class="more-icon" wx:if="{{scenicList.length > 3}}" bindtap="selectMenu" data-index="4" src="./images/arrow.png" />
+      <view class="more-btn row" wx:if="{{scenicList.length > 3}}" bindtap="selectMenu" data-index="4">
+        <view>更多</view>
+        <image class="more-icon" src="/images/arrow.png" />
+      </view>
     </view>
     <scenic-item wx:for="{{ARRAY.slice(scenicList, 0, 3)}}" wx:key="index" item="{{item}}" />
   </view>
 
   <view class="result-overview-wrap" wx:if="{{hotelList.length}}">
-    <view class="result-title row">
+    <view class="result-title row between">
       <view>酒店</view>
-      <image class="more-icon" wx:if="{{hotelList.length > 3}}" bindtap="selectMenu" data-index="5" src="./images/arrow.png" />
+      <view class="more-btn row" wx:if="{{hotelList.length > 3}}" bindtap="selectMenu" data-index="5">
+        <view>更多</view>
+        <image class="more-icon" src="/images/arrow.png" />
+      </view>
     </view>
     <hotel-item wx:for="{{ARRAY.slice(hotelList, 0, 3)}}" wx:key="index" item="{{item}}" />
   </view>
 
   <view class="result-overview-wrap" wx:if="{{restaurantList.length}}">
-    <view class="result-title row">
+    <view class="result-title row between">
       <view>餐厅</view>
-      <image class="more-icon" wx:if="{{restaurantList.length > 3}}" bindtap="selectMenu" data-index="6" src="./images/arrow.png" />
+      <view class="more-btn row" wx:if="{{restaurantList.length > 3}}" bindtap="selectMenu" data-index="6">
+        <view>更多</view>
+        <image class="more-icon" src="/images/arrow.png" />
+      </view>
     </view>
     <restaurant-item wx:for="{{ARRAY.slice(restaurantList, 0, 3)}}" wx:key="index" item="{{item}}" />
   </view>
 
   <view class="result-overview-wrap" wx:if="{{goodsList.length}}">
-    <view class="result-title row">
+    <view class="result-title row between">
       <view>商品</view>
-      <image class="more-icon" wx:if="{{goodsList.length > 3}}" bindtap="selectMenu" data-index="7" src="./images/arrow.png" />
+      <view class="more-btn row" wx:if="{{goodsList.length > 3}}" bindtap="selectMenu" data-index="7">
+        <view>更多</view>
+        <image class="more-icon" src="/images/arrow.png" />
+      </view>
     </view>
     <goods-item wx:for="{{ARRAY.slice(goodsList, 0, 3)}}" wx:key="index" item="{{item}}" />
   </view>
 
   <view class="result-overview-wrap" wx:if="{{userList.length}}">
-    <view class="result-title row">
+    <view class="result-title row between">
       <view>用户</view>
-      <image class="more-icon" wx:if="{{userList.length > 3}}" bindtap="selectMenu" data-index="8" src="./images/arrow.png" />
+      <view class="more-btn row" wx:if="{{userList.length > 3}}" bindtap="selectMenu" data-index="8">
+        <view>更多</view>
+        <image class="more-icon" src="/images/arrow.png" />
+      </view>
     </view>
     <user-item wx:for="{{ARRAY.slice(userList, 0, 3)}}" wx:key="index" item="{{item}}" />
   </view>
