--- a/pages/subpages/common/search/index.wxss
+++ b/pages/subpages/common/search/index.wxss
@@ -130,13 +130,20 @@
 }
 
 .result-overview-wrap {
-  margin-bottom: 24rpx;
+  margin-bottom: 32rpx;
 }
 .result-title {
-  margin-bottom: 18rpx;
+  margin-bottom: 20rpx;
+  padding: 0 12rpx;
   color: #333;
-  font-size: 28rpx;
-  font-weight: 500;
+  font-size: 30rpx;
+  font-weight: 550;
+}
+
+.more-btn {
+  color: var(--blue-1);
+  font-size: 24rpx;
+  font-weight: normal;
 }
 .more-icon {
   width: 18rpx;
