--- a/pages/subpages/mall/catering/subpages/meal-ticket-order-check/index.wxss
+++ b/pages/subpages/mall/catering/subpages/meal-ticket-order-check/index.wxss
@@ -1,78 +1,54 @@
 .container {
-  padding: 24rpx;
+  padding: 24rpx 0 calc(150rpx + env(safe-area-inset-bottom));
 }
-  
-.card {
-  margin-bottom: 24rpx;
-  padding: 24rpx;
-  background: #fff;
-  border-radius: 24rpx;
+.container::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 600rpx;
+  content: "";
+  background: linear-gradient( 180deg, #00B2FF 20%, rgba(0,178,255,0) 100%);
+  z-index: -1;
+}
+
+.header {
+  padding-left: 8px;
+  padding-right: 40px;
+  height: 44px;
+}
+.title {
+  flex: 1;
+  color: #fff;
+  font-size: 32rpx;
+  text-align: center;
+  font-weight: bold;
 }
 
 .ticket {
-  position: relative;
-  padding: 24rpx;
-  background: #feede6;
-  border-radius: 24rpx;
+  margin: 24rpx;
+  font-size: 0;
+  border-radius: 32rpx;
+  overflow: hidden;
 }
-.ticket-title {
+
+.ticket-header {
+  padding: 32rpx;
+  padding-bottom: 16rpx;
+  background: #fff;
+}
+.restaurant-name {
   color: #333;
-  font-size: 24rpx;
+  font-size: 28rpx;
+}
+.ticket-name-wrap {
+  margin-top: 8rpx;
 }
 .ticket-name {
-  margin-top: 12rpx;
   color: #333;
   font-size: 38rpx;
   font-weight: 550;
 }
-.ticket-tips-wrap {
-  margin-top: 48rpx;
-}
-.ticket-tips {
-  margin-top: 12rpx;
-  font-size: 24rpx;
-}
-.tips-title {
-  font-weight: 500;
-}
-.tips-content {
-  margin-left: 12rpx;
-}
-.more-icon {
-  width: 24rpx;
-  height: 24rpx;
-}
-
-.split-line {
-  position: absolute;
-  left: 0;
-  top: 132rpx;
-  width: 100%;
-  height: 24rpx;
-}
-.line {
-  margin: 0 24rpx;
-  width: 100%;
-  border-top: 1px dashed #ccc;
-}
-.left-circle, .right-circle {
-  position: absolute;
-  top: 0;
-  width: 12rpx;
-  height: 24rpx;
-  background: #fff;
-}
-.left-circle {
-  left: -1px;
-  border-top-right-radius: 12rpx;
-  border-bottom-right-radius: 12rpx;
-}
-.right-circle {
-  right: -1px;
-  border-top-left-radius: 12rpx;
-  border-bottom-left-radius: 12rpx;
-}
-
 .price-wrap {
   margin-top: 24rpx;
 }
@@ -80,10 +56,46 @@
   margin-top: 6rpx;
   margin-left: 8rpx;
   padding: 0 6rpx;
-  color: #F66B38;
+  color: #ff5040;
   font-size: 20rpx;
-  border: 1px solid #fed9cc;
+  border: 1px solid #f77d72;
   border-radius: 6rpx;
+}
+
+.split-line {
+  width: 100%;
+}
+
+.count-control-title {
+  color: #333;
+  font-size: 30rpx;
+  font-weight: bold;
+}
+
+.ticket-content {
+  padding: 32rpx;
+  padding-top: 16rpx;
+  background: #fff;
+}
+
+.ticket-tips-wrap {
+  margin-top: 32rpx;
+}
+.ticket-tips {
+  margin-top: 12rpx;
+  font-size: 24rpx;
+}
+.tips-title {
+  color: #333;
+  font-weight: 500;
+}
+.tips-content {
+  margin-left: 12rpx;
+  color: #999;
+}
+.more-icon {
+  width: 24rpx;
+  height: 24rpx;
 }
 
 .bottom-bar {
@@ -108,5 +120,5 @@
   color: #fff;
   font-size: 32rpx;
   border-radius: 40rpx;
-  background: #F66B38;
+  background: var(--blue-1);
 }
